--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:r8fraAz+D/Q/7vC1n5N2uKyD4uws2/crQuiYcLVceIw=
+APP_KEY=base64:9H9V9C7+EhwEx9KSNh+Rd37zDFcryVbga6GX3jShHWk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.10.10
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=mediadb
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
