--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -7,7 +7,7 @@ keys:
     - ~/.ssh/id_rsa
 folders:
     -
-        map: /Users/anna/Documents/_dhbw/crossmedia/mediadb
+        map: C:/Wamp/sites/mediadb
         to: /home/vagrant/code
 sites:
     -
