--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.4",
-    "bootstrap": "^4.2.1"
+    "bootstrap": "^4.2.1",
+    "vuex": "^3.1.0"
   }
 }
