--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.4",
-    "bootstrap": "^4.2.1",
     "vuex": "^3.1.0",
-    "exif-js": "^2.3.0"
+    "exif-js": "^2.3.0",
+    "ajv": "^6.7.0",
+    "bootstrap": "^4.2.1",
+    "child_process": "^1.0.2",
+    "fs": "0.0.1-security",
+    "jimp": "^0.6.0",
+    "popper.js": "^1.14.6"
   }
 }
