--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "^4.1",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "lsolesen/pel": "0.9.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
