--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "^4.1",
         "intervention/image": "^2.4",
+        "intervention/imagecache": "^2.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "lsolesen/pel": "0.9.*"
