--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/imagecache": "^2.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
-        "lsolesen/pel": "0.9.*"
+        "lsolesen/pel": "0.9.*",
+        "mpdf/mpdf": "^7.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
